# ChangeLog for dev-ruby/ruby-tcpwrap
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-tcpwrap/ChangeLog,v 1.12 2007/02/22 01:18:01 peper Exp $

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  04 Feb 2006; <solar@gentoo.org> :
  - redigest needed due to bad RMD160. bug #121124

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> ruby-tcpwrap-0.6.ebuild:
  Mark 0.6 stable on ia64

  03 Oct 2005; Aron Griffis <agriffis@gentoo.org> ruby-tcpwrap-0.6.ebuild:
  Mark 0.6 ~ia64

  24 Apr 2005; Simon Stelling <blubb@gentoo.org> ruby-tcpwrap-0.6.ebuild:
  stable on amd64

  09 Aug 2004; Tom Martin <slarti@gentoo.org> ruby-tcpwrap-0.6.ebuild:
  Marked ~amd64 for bug 58734.

  17 Apr 2004; David Holm <dholm@gentoo.org> ruby-tcpwrap-0.6.ebuild:
  Added to ~ppc.

  11 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> ruby-tcpwrap-0.5.ebuild,
  ruby-tcpwrap-0.6.ebuild:
  virtual/ruby fix

*ruby-tcpwrap-0.6 (20 Sep 2003)

  04 Nov 2003; Mamoru KOMACHI <usata@gentoo.org> ruby-tcpwrap-0.6.ebuild:
  Marked as stable for x86 and alpha

  20 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> ruby-tcpwrap-0.5.ebuild,
  ruby-tcpwrap-0.6.ebuild:
  Version bumped.  Marked 0.5 stable on x86.

*ruby-tcpwrap-0.5 (13 May 2003)

  13 May 2003; Tom Payne <twp@gentoo.org> ruby-tcpwrap-0.5.ebuild :
  Initial import. Ebuild submitted by Matsuu Takuto. Bug # 20896.