@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-tcpwrap/ruby-tcpwrap-0.6.ebuild,v 1.12 2006/01/31 20:04:51 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-tcpwrap/ruby-tcpwrap-0.6.ebuild,v 1.13 2009/06/13 08:30:07 graaff Exp $
 
 inherit ruby
 
@@ -12,7 +12,7 @@ SRC_URI="http://shugo.net/archive/ruby-tcpwrap/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-USE_RUBY="ruby16 ruby18 ruby19"
+USE_RUBY="ruby18 ruby19"
 KEYWORDS="alpha amd64 ~hppa ia64 ~mips ~ppc ~sparc x86"
 
 DEPEND="virtual/ruby
@@ -26,5 +26,5 @@ src_install(){
 	ruby_src_install
 
 	insinto /usr/share/doc/${PF}/html
-	doins ${S}/doc/*
+	doins "${S}"/doc/*
 }
